# gcc_scanf_checker

./: README.md  meson.build  scanf_checker.cpp
test/: vulnerable.c
